--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.3.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
@@ -22,7 +23,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "tailwindcss": "^3.2.4"
+    "react-query": "^3.39.3",
+    "tailwindcss": "^3.2.4",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
