--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.7.1",
     "react-native": "0.70.5",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
