--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todomobileapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -20,10 +20,10 @@
     "react-icons": "^4.7.1",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1293.0",
-    "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-prompt-android": "^1.1.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-query": "^3.39.3",
     "tailwindcss": "^3.2.4",
