--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "./node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --no-dev --minify",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios"
   },
@@ -21,6 +22,7 @@
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.7",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
@@ -33,7 +35,10 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.13",
+    "install": "^0.13.0",
+    "npm": "^9.5.0",
     "typescript": "^4.6.3"
   },
   "private": true
