exporting to mobile device

--- a/app.json
+++ b/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.d4rkp1xel.ToDoMobileApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "0fc0f982-c76b-47bb-a2fd-bd2c98166cce"
+      }
     }
   }
 }
